examples/test/testpolicy17364.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17364
  namespace: namespace156
spec:
  podSelector:
    matchLabels:
      key33: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value33
          key8: value13
          key16: value15
      podSelector:
        matchLabels:
          key38: value46
